feat: Hoàn thiện đa ngôn ngữ trang chủ, footer và sửa lỗi điều hướng

--- a/vcba-front-app/src/assets/i18n/en.json
+++ b/vcba-front-app/src/assets/i18n/en.json
@@ -13,5 +13,52 @@
   "menu.register": "BECOME A MEMBER",
   "menu.projects": "PROJECTS",
   "menu.legal": "LEGAL DOCUMENTS",
-  "menu.contact": "CONTACT"
+  "menu.contact": "CONTACT",
+  "footer.privacy": "Privacy Policy",
+  "footer.terms": "Terms of Use",
+  "footer.sitemap": "Sitemap",
+  "home.news.title": "NEWS AND EVENTS",
+  "home.news.subtitle": "Update the latest information and activities from VCBA and the business community.",
+  "home.news.viewMore": "View More",
+  "home.news.viewMoreArticles": "View More Articles",
+  "home.news.categories.all": "All",
+  "home.news.categories.featured": "Featured Activities",
+  "home.news.categories.member": "Member News",
+  "home.news.categories.upcoming": "Upcoming Events",
+  "home.about.title": "ABOUT VCBA",
+  "home.about.subtitle": "Vietnam Cambodia Business Association - Connection and Sustainable Development",
+  "home.about.section1.title": "About VCBA",
+  "home.about.section1.p1": "The Vietnam Cambodia Business Association (VCBA) is a non-governmental organization established to connect, support, and promote the development of the Vietnamese business community in Cambodia.",
+  "home.about.section1.p2": "With the mission of building a strong business community, VCBA plays a crucial role as a bridge between Vietnamese enterprises and the Cambodian market, contributing to the promotion of economic cooperation between the two countries.",
+  "home.about.section1.alt": "About VCBA",
+  "home.about.section2.title": "History of Formation",
+  "home.about.section2.p1": "VCBA was established in 2015 with the participation of pioneering Vietnamese entrepreneurs in Cambodia. From humble beginnings, the association has continuously grown and expanded its scope of activities.",
+  "home.about.section2.p2": "Over nearly a decade of formation and development, VCBA has become a reputable representative organization for the Vietnamese business community in Cambodia, with over 200 members operating in various economic fields.",
+  "home.about.section2.alt": "History of Formation",
+  "home.about.section3.title": "Role and Significance",
+  "home.about.section3.p1": "VCBA plays a significant role in promoting Vietnam-Cambodia economic cooperation, creating a favorable environment for Vietnamese businesses to develop sustainably in the Cambodian market.",
+  "home.about.section3.p2": "The association is not only a place to connect businesses but also a cultural bridge, contributing to strengthening the friendship and comprehensive cooperation between the two fraternal nations of Vietnam and Cambodia.",
+  "home.about.section3.alt": "Role and Significance",
+  "home.members.title": "OUTSTANDING MEMBERS",
+  "home.members.subtitle": "Leading member enterprises of VCBA",
+  "home.members.field.telecom": "Telecommunications",
+  "home.members.field.finance": "Finance - Banking",
+  "home.members.field.aviation": "Aviation",
+  "home.members.field.food": "Food & Beverage",
+  "home.members.field.agriculture": "Agriculture",
+  "footer.about.description": "VCBA is a non-profit organization established on the basis of inheriting the Vietnam Business Club in Cambodia, with the participation of large enterprises in many economic fields.",
+  "footer.contact.title": "Contact Information",
+  "footer.contact.address.label": "Address",
+  "footer.contact.address.value": "No. 255 (Suncity) 1st Floor, Street 51 corner Street 370, Sangkat Buong Keng Kang, Phnom Penh",
+  "footer.contact.hotline.label": "Hotline",
+  "footer.contact.email.label": "Email",
+  "footer.social.title": "Connect with us",
+  "footer.social.description": "Follow VCBA to get the latest updates on activities and business opportunities",
+  "footer.social.facebook": "Facebook",
+  "footer.social.youtube": "YouTube",
+  "footer.social.linkedin": "LinkedIn",
+  "footer.copyright": "© 2024 VCBA - Vietnam Cambodia Business Association. All rights reserved.",
+  "footer.links.privacy": "Privacy Policy",
+  "footer.links.terms": "Terms of Use",
+  "footer.links.sitemap": "Sitemap"
 } 
