--- a/vcba-front-app/src/assets/i18n/km.json
+++ b/vcba-front-app/src/assets/i18n/km.json
@@ -13,5 +13,37 @@
   "menu.register": "ក្លាយជាសមាជិក",
   "menu.projects": "គម្រោង",
   "menu.legal": "ឯកសារច្បាប់",
-  "menu.contact": "ទំនាក់ទំនង"
+  "menu.contact": "ទំនាក់ទំនង",
+  "footer.privacy": "គោលការណ៍​ភាព​ឯកជន",
+  "footer.terms": "លក្ខខណ្ឌនៃការប្រើប្រាស់",
+  "footer.sitemap": "ផែនទីគេហទំព័រ",
+  "home.news.title": "ព័ត៌មាន និងព្រឹត្តិការណ៍",
+  "home.news.subtitle": "ធ្វើបច្ចុប្បន្នភាពព័ត៌មាន និងសកម្មភាពចុងក្រោយបំផុតពី VCBA និងសហគមន៍អាជីវកម្ម។",
+  "home.news.viewMore": "មើល​បន្ថែម",
+  "home.news.viewMoreArticles": "មើលអត្ថបទបន្ថែម",
+  "home.news.categories.all": "ទាំងអស់",
+  "home.news.categories.featured": "សកម្មភាពពិសេស",
+  "home.news.categories.member": "ព័ត៌មាន​សមាជិក",
+  "home.news.categories.upcoming": "ព្រឹត្តិការណ៍​នា​ពេល​ខាង​មុខ",
+  "home.about.title": "អំពី VCBA",
+  "home.about.subtitle": "សមាគមធុរកិច្ចវៀតណាម-កម្ពុជា - ការតភ្ជាប់ និងការអភិវឌ្ឍប្រកបដោយចីរភាព",
+  "home.about.section1.title": "អំពី VCBA",
+  "home.about.section1.p1": "សមាគមធុរកិច្ចវៀតណាមនៅកម្ពុជា (VCBA) គឺជាអង្គការមិនមែនរដ្ឋាភិបាលដែលត្រូវបានបង្កើតឡើងដើម្បីតភ្ជាប់ គាំទ្រ និងជំរុញការអភិវឌ្ឍនៃសហគមន៍ធុរកិច្ចវៀតណាមនៅកម្ពុជា។",
+  "home.about.section1.p2": "ជាមួយនឹងបេសកកម្មកសាងសហគមន៍ធុរកិច្ចដ៏រឹងមាំ VCBA ដើរតួនាទីយ៉ាងសំខាន់ជាស្ពានតភ្ជាប់រវាងសហគ្រាសវៀតណាម និងទីផ្សារកម្ពុជា ដោយរួមចំណែកជំរុញកិច្ចសហប្រតិបត្តិការសេដ្ឋកិច្ចរវាងប្រទេសទាំងពីរ។",
+  "home.about.section1.alt": "អំពី VCBA",
+  "home.about.section2.title": "ប្រវត្តិនៃការបង្កើត",
+  "home.about.section2.p1": "VCBA ត្រូវបានបង្កើតឡើងក្នុងឆ្នាំ 2015 ដោយមានការចូលរួមពីសហគ្រិនវៀតណាមឈានមុខគេនៅកម្ពុជា។ តាំងពីការចាប់ផ្តើមដ៏រាបទាប សមាគមបានបន្តរីកចម្រើន និងពង្រីកវិសាលភាពនៃសកម្មភាពរបស់ខ្លួន។",
+  "home.about.section2.p2": "ក្នុងរយៈពេលជិតមួយទស្សវត្សនៃការបង្កើត និងអភិវឌ្ឍន៍ VCBA បានក្លាយជាអង្គការតំណាងដ៏មានកិត្យានុភាពសម្រាប់សហគមន៍ធុរកិច្ចវៀតណាមនៅកម្ពុជា ដែលមានសមាជិកជាង 200 នាក់កំពុងប្រតិបត្តិการក្នុងវិស័យសេដ្ឋកិច្ចផ្សេងៗ។",
+  "home.about.section2.alt": "ប្រវត្តិនៃការបង្កើត",
+  "home.about.section3.title": "តួនាទី និងសារៈសំខាន់",
+  "home.about.section3.p1": "VCBA ដើរតួនាទីយ៉ាងសំខាន់ក្នុងការជំរុញកិច្ចសហប្រតិបត្តិការសេដ្ឋកិច្ចវៀតណាម-កម្ពុជា បង្កើតបរិយាកាសអំណោយផលសម្រាប់អាជីវកម្មវៀតណាមដើម្បីអភិវឌ្ឍប្រកបដោយចីរភាពក្នុងទីផ្សារកម្ពុជា។",
+  "home.about.section3.p2": "សមាគមមិនត្រឹមតែជាកន្លែងសម្រាប់ភ្ជាប់អាជីវកម្មប៉ុណ្ណោះទេ ប៉ុន្តែក៏ជាស្ពានវប្បធម៌ដែលរួមចំណែកពង្រឹងមិត្តភាព និងកិច្ចសហប្រតិបត្តិការគ្រប់ជ្រុងជ្រោយរវាងប្រជាជាតិបងប្អូនទាំងពីរ វៀតណាម និងកម្ពុជា។",
+  "home.about.section3.alt": "តួនាទី និងសារៈសំខាន់",
+  "home.members.title": "សមាជិកឆ្នើម",
+  "home.members.subtitle": "សហគ្រាសសមាជិកឈានមុខគេរបស់ VCBA",
+  "home.members.field.telecom": "ទូរគមនាគមន៍",
+  "home.members.field.finance": "ហិរញ្ញវត្ថុ - ធនាគារ",
+  "home.members.field.aviation": "អាកាសចរណ៍",
+  "home.members.field.food": "អាហារ និងភេសជ្ជៈ",
+  "home.members.field.agriculture": "កសិកម្ម"
 } 
