--- a/vcba-front-app/src/assets/i18n/vi.json
+++ b/vcba-front-app/src/assets/i18n/vi.json
@@ -13,5 +13,52 @@
   "menu.register": "ĐĂNG KÝ HỘI VIÊN",
   "menu.projects": "DỰ ÁN",
   "menu.legal": "VĂN BẢN PHÁP LUẬT",
-  "menu.contact": "LIÊN HỆ"
+  "menu.contact": "LIÊN HỆ",
+  "footer.privacy": "Chính sách bảo mật",
+  "footer.terms": "Điều khoản sử dụng",
+  "footer.sitemap": "Sơ đồ website",
+  "home.news.title": "TIN TỨC VÀ SỰ KIỆN",
+  "home.news.subtitle": "Cập nhật những thông tin và hoạt động mới nhất từ VCBA và cộng đồng doanh nghiệp.",
+  "home.news.viewMore": "Xem thêm",
+  "home.news.viewMoreArticles": "Xem thêm bài viết",
+  "home.news.categories.all": "Tất cả",
+  "home.news.categories.featured": "Hoạt động nổi bật",
+  "home.news.categories.member": "Tin hội viên",
+  "home.news.categories.upcoming": "Sự kiện sắp tới",
+  "home.about.title": "GIỚI THIỆU VỀ VCBA",
+  "home.about.subtitle": "Hiệp hội Doanh nghiệp Việt Nam tại Campuchia - Kết nối và phát triển bền vững",
+  "home.about.section1.title": "Giới thiệu VCBA",
+  "home.about.section1.p1": "Hiệp hội Doanh nghiệp Việt Nam tại Campuchia (VCBA) là tổ chức phi chính phủ được thành lập nhằm kết nối, hỗ trợ và thúc đẩy sự phát triển của cộng đồng doanh nghiệp Việt Nam tại Campuchia.",
+  "home.about.section1.p2": "Với sứ mệnh tạo dựng một cộng đồng doanh nghiệp mạnh mẽ, VCBA đóng vai trò là cầu nối quan trọng giữa các doanh nghiệp Việt Nam và thị trường Campuchia, góp phần thúc đẩy quan hệ hợp tác kinh tế giữa hai quốc gia.",
+  "home.about.section1.alt": "Giới thiệu VCBA",
+  "home.about.section2.title": "Lịch sử hình thành",
+  "home.about.section2.p1": "VCBA được thành lập vào năm 2015 với sự tham gia của các doanh nghiệp tiên phong người Việt tại Campuchia. Từ những bước đầu khiêm tốn, hiệp hội đã không ngừng phát triển và mở rộng quy mô hoạt động.",
+  "home.about.section2.p2": "Qua gần một thập kỷ hình thành và phát triển, VCBA đã trở thành tổ chức đại diện uy tín của cộng đồng doanh nghiệp Việt Nam tại Campuchia, với hơn 200 thành viên hoạt động trong nhiều lĩnh vực kinh tế khác nhau.",
+  "home.about.section2.alt": "Lịch sử hình thành",
+  "home.about.section3.title": "Vai trò và ý nghĩa",
+  "home.about.section3.p1": "VCBA đóng vai trò quan trọng trong việc thúc đẩy hợp tác kinh tế Việt - Campuchia, tạo môi trường thuận lợi cho các doanh nghiệp Việt Nam phát triển bền vững tại thị trường Campuchia.",
+  "home.about.section3.p2": "Hiệp hội không chỉ là nơi kết nối các doanh nghiệp mà còn là cầu nối văn hóa, góp phần tăng cường tình hữu nghị và hợp tác toàn diện giữa hai dân tộc anh em Việt Nam - Campuchia.",
+  "home.about.section3.alt": "Vai trò và ý nghĩa",
+  "home.members.title": "HỘI VIÊN TIÊU BIỂU",
+  "home.members.subtitle": "Các doanh nghiệp thành viên hàng đầu của VCBA",
+  "home.members.field.telecom": "Viễn thông",
+  "home.members.field.finance": "Tài chính - Ngân hàng",
+  "home.members.field.aviation": "Hàng không",
+  "home.members.field.food": "Thực phẩm & Đồ uống",
+  "home.members.field.agriculture": "Nông nghiệp",
+  "footer.about.description": "VCBA là tổ chức phi lợi nhuận được thành lập trên cơ sở kế thừa Câu lạc bộ Doanh nghiệp Việt Nam tại Campuchia, có sự tham gia của các doanh nghiệp lớn trong nhiều lĩnh vực kinh tế.",
+  "footer.contact.title": "Thông tin liên hệ",
+  "footer.contact.address.label": "Địa chỉ",
+  "footer.contact.address.value": "Số 255 (Suncity) Tầng 1, đường 51 góc đường 370, phường Buong Keng Koan, thủ đô Phnompenh",
+  "footer.contact.hotline.label": "Hotline",
+  "footer.contact.email.label": "Email",
+  "footer.social.title": "Kết nối với chúng tôi",
+  "footer.social.description": "Theo dõi VCBA để cập nhật thông tin mới nhất về các hoạt động và cơ hội kinh doanh",
+  "footer.social.facebook": "Facebook",
+  "footer.social.youtube": "YouTube",
+  "footer.social.linkedin": "LinkedIn",
+  "footer.copyright": "© 2024 VCBA - Hiệp hội Doanh nghiệp Việt Nam-Campuchia. All rights reserved.",
+  "footer.links.privacy": "Chính sách bảo mật",
+  "footer.links.terms": "Điều khoản sử dụng",
+  "footer.links.sitemap": "Sơ đồ website"
 } 
