feat: Implement and fix multi-language functionality across pages

--- a/vcba-front-app/src/assets/i18n/en.json
+++ b/vcba-front-app/src/assets/i18n/en.json
@@ -11,20 +11,115 @@
   "menu.organization.executive": "Executive Committee",
   "menu.members": "LIST OF MEMBERS",
   "menu.register": "BECOME A MEMBER",
-  "menu.projects": "PROJECTS",
-  "menu.legal": "LEGAL DOCUMENTS",
-  "menu.contact": "CONTACT",
-  "footer.privacy": "Privacy Policy",
-  "footer.terms": "Terms of Use",
-  "footer.sitemap": "Sitemap",
-  "home.news.title": "NEWS AND EVENTS",
-  "home.news.subtitle": "Update the latest information and activities from VCBA and the business community.",
+  "menu.projects": "Projects",
+  "menu.legal": "Legal Documents",
+  "menu.contact": "Contact",
+  "footer.about.description": "VCBA is a non-governmental organization that connects, supports, and promotes the development of the Vietnamese business community in Cambodia.",
+  "footer.contact.title": "Contact Information",
+  "footer.contact.address.label": "Address:",
+  "footer.contact.address.value": "Building H, Preah Norodom Blvd, Phnom Penh, Cambodia",
+  "footer.contact.hotline.label": "Hotline:",
+  "footer.contact.email.label": "Email:",
+  "footer.social.title": "Connect With Us",
+  "footer.social.description": "Follow us on social media for the latest updates.",
+  "footer.social.facebook": "Facebook",
+  "footer.social.youtube": "YouTube",
+  "footer.social.linkedin": "LinkedIn",
+  "footer.links.privacy": "Privacy Policy",
+  "footer.links.terms": "Terms of Use",
+  "footer.links.sitemap": "Sitemap",
+  "footer.copyright": "© 2024 Vietnamese Business Association in Cambodia (VCBA).",
+  "footer.rights": "All rights reserved.",
+  "breadcrumb.home": "Home",
+  "breadcrumb.news": "News",
+  "news.card.readMore": "Read More",
+  "news.detail.postedOn": "Posted on",
+  "news.detail.author": "Author",
+  "news.detail.views": "Views",
+  "news.detail.tags": "Tags",
+  "news.detail.share": "Share",
+  "news.detail.shareOn": "Share on {{platform}}",
+  "news.detail.relatedNews": "Related News",
+  "news.detail.category.event": "Events & Activities",
+  "news.detail.author.vcba": "VCBA Media Team",
+  "news.detail.article1.title": "VCBA Successfully Holds Annual Conference 2024",
+  "news.detail.article1.excerpt": "The VCBA Annual Conference 2024 was successfully held with the participation of over 200 delegates representing Vietnamese businesses in Cambodia, along with partners and guests from both countries.",
+  "news.detail.article1.h2_1": "Exceeding Expectations",
+  "news.detail.article1.p1": "The VCBA Annual Conference 2024 was held at a 5-star hotel in Phnom Penh under the theme \"Connection - Cooperation - Sustainable Development\". This event marked a year of effective operation for the association with many significant achievements.",
+  "news.detail.article1.h3_1": "Conference Highlights:",
+  "news.detail.article1.li1_1": "Review of 2023 activities and orientation for 2024",
+  "news.detail.article1.li1_2": "Signing of new cooperation agreements with Cambodian partners",
+  "news.detail.article1.li1_3": "Award ceremony for outstanding enterprises",
+  "news.detail.article1.li1_4": "Forum on investment opportunities in Cambodia",
+  "news.detail.article1.h2_2": "Leadership's Speech",
+  "news.detail.article1.q1": "VCBA has been playing an important role in connecting the Vietnamese business community in Cambodia. We are committed to continuing to support members in sustainable business development.",
+  "news.detail.article1.q1_cite": "Mr. Nguyen Van Hung, VCBA Chairman",
+  "news.detail.article1.p2": "Mr. Nguyen Van Hung, VCBA Chairman, emphasized: \"In 2024, VCBA will focus on expanding its member network, strengthening training activities, and supporting businesses to access Cambodian market information more effectively.\"",
+
+  "breadcrumb.allNews": "All News",
+
+  "news.page.title": "All VCBA News",
+  "news.page.subtitle": "Stay updated with the latest news and activities from the Vietnam Business Association in Cambodia",
+  "news.page.featuredBadge": "Featured",
+  "news.page.views": "views",
+  "news.page.noArticles": "No articles found in this category.",
+
+  "news.page.categories.all": "All",
+  "news.page.categories.events": "Events",
+  "news.page.categories.internal": "Internal Activities",
+  "news.page.categories.investment": "Investment",
+  "news.page.categories.cooperation": "Cooperation",
+  "news.page.categories.networking": "Networking",
+
+  "news.page.filters.sortBy": "Sort by",
+  "news.page.filters.latest": "Latest",
+  "news.page.filters.oldest": "Oldest",
+  "news.page.filters.popular": "Popular",
+  "news.page.filters.display": "Display",
+  "news.page.filters.grid": "Grid",
+  "news.page.filters.list": "List",
+  "news.page.filters.searchPlaceholder": "Search for news...",
+
+  "news.page.pagination.previous": "Previous",
+  "news.page.pagination.next": "Next",
+
+  "news.page.article1.title": "VCBA Successfully Holds Annual Conference 2024",
+  "news.page.article1.description": "The VCBA Annual Conference 2024 was successfully held with the participation of over 200 delegates representing Vietnamese businesses in Cambodia...",
+  "news.page.article2.title": "Gala Dinner Connects Vietnam-Cambodia Businesses",
+  "news.page.article2.description": "The annual gala dinner program creates opportunities for connection and exchange between businesses of the two countries...",
+  "news.page.article3.title": "Seminar on Investment Opportunities in Cambodia",
+  "news.page.article3.description": "The seminar provides detailed information about the investment environment and potential sectors in Cambodia...",
+  "news.page.article4.title": "Ample Room for Vietnamese Enterprises to Invest and Do Business in Cambodia",
+  "news.page.article4.description": "The Vietnamese Embassy in Cambodia organized a business meeting to facilitate the expansion of business activities for enterprises...",
+  "news.page.article5.title": "Metfone - The Largest Telecommunications Operator in Cambodia",
+  "news.page.article5.description": "Viettel Cambodia, with the Metfone brand, has been operating since 2009 and is now the number 1 network operator in Cambodia with over 6 million customers...",
+  "news.page.article6.title": "Promoting Trade Cooperation Between Vietnam and Cambodia",
+  "news.page.article6.description": "Many cooperation opportunities in the fields of agriculture, processing industry, tourism, and services between the two countries are opened up...",
+  "news.page.article7.title": "Specialized Workshop on Import-Export",
+  "news.page.article7.description": "The workshop provides information on import-export procedures and customs formalities in Cambodia...",
+
+  "home.news.article1.title": "Vietnam - Cambodia Promote Industrial and Trade Cooperation",
+  "home.news.article1.excerpt": "Vietnam and Cambodia have agreed on several measures to promote cooperation...",
+  "home.news.article2.title": "The 10th VCBA Annual Conference",
+  "home.news.article2.excerpt": "The VCBA Annual Conference took place in Phnom Penh with the participation of over 200 businesses...",
+  "home.news.article3.title": "Metfone - The Largest Telecommunication Operator in Cambodia",
+  "home.news.article3.excerpt": "Viettel Cambodia with the Metfone brand has been operating since 2009 and is now the number 1 operator...",
+  "home.news.article4.title": "Gala Dinner Connecting Vietnamese-Cambodian Businesses",
+  "home.news.article4.excerpt": "The annual gala dinner program creates opportunities for connection and exchange between businesses...",
+  "home.news.article5.title": "VCBA Visits and Works at the Vietnamese Embassy",
+  "home.news.article5.excerpt": "The working delegation of the Vietnam Business Association in Cambodia had an important working session...",
+  "home.news.article6.title": "Sacombank Cambodia Receives Prestigious Award",
+  "home.news.article6.excerpt": "Sacombank Cambodia branch is honored to receive the Best Retail Bank award...",
+
+  "home.news.title": "News & Events",
+  "home.news.subtitle": "Stay updated with the latest news and activities from VCBA and the business community.",
   "home.news.viewMore": "View More",
   "home.news.viewMoreArticles": "View More Articles",
   "home.news.categories.all": "All",
   "home.news.categories.featured": "Featured Activities",
   "home.news.categories.member": "Member News",
   "home.news.categories.upcoming": "Upcoming Events",
+
   "home.about.title": "ABOUT VCBA",
   "home.about.subtitle": "Vietnam Cambodia Business Association - Connection and Sustainable Development",
   "home.about.section1.title": "About VCBA",
@@ -39,26 +134,12 @@
   "home.about.section3.p1": "VCBA plays a significant role in promoting Vietnam-Cambodia economic cooperation, creating a favorable environment for Vietnamese businesses to develop sustainably in the Cambodian market.",
   "home.about.section3.p2": "The association is not only a place to connect businesses but also a cultural bridge, contributing to strengthening the friendship and comprehensive cooperation between the two fraternal nations of Vietnam and Cambodia.",
   "home.about.section3.alt": "Role and Significance",
+
   "home.members.title": "OUTSTANDING MEMBERS",
   "home.members.subtitle": "Leading member enterprises of VCBA",
   "home.members.field.telecom": "Telecommunications",
   "home.members.field.finance": "Finance - Banking",
   "home.members.field.aviation": "Aviation",
   "home.members.field.food": "Food & Beverage",
-  "home.members.field.agriculture": "Agriculture",
-  "footer.about.description": "VCBA is a non-profit organization established on the basis of inheriting the Vietnam Business Club in Cambodia, with the participation of large enterprises in many economic fields.",
-  "footer.contact.title": "Contact Information",
-  "footer.contact.address.label": "Address",
-  "footer.contact.address.value": "No. 255 (Suncity) 1st Floor, Street 51 corner Street 370, Sangkat Buong Keng Kang, Phnom Penh",
-  "footer.contact.hotline.label": "Hotline",
-  "footer.contact.email.label": "Email",
-  "footer.social.title": "Connect with us",
-  "footer.social.description": "Follow VCBA to get the latest updates on activities and business opportunities",
-  "footer.social.facebook": "Facebook",
-  "footer.social.youtube": "YouTube",
-  "footer.social.linkedin": "LinkedIn",
-  "footer.copyright": "© 2024 VCBA - Vietnam Cambodia Business Association. All rights reserved.",
-  "footer.links.privacy": "Privacy Policy",
-  "footer.links.terms": "Terms of Use",
-  "footer.links.sitemap": "Sitemap"
+  "home.members.field.agriculture": "Agriculture"
 } 
