--- a/vcba-front-app/src/assets/i18n/km.json
+++ b/vcba-front-app/src/assets/i18n/km.json
@@ -14,9 +14,22 @@
   "menu.projects": "គម្រោង",
   "menu.legal": "ឯកសារច្បាប់",
   "menu.contact": "ទំនាក់ទំនង",
-  "footer.privacy": "គោលការណ៍​ភាព​ឯកជន",
-  "footer.terms": "លក្ខខណ្ឌនៃការប្រើប្រាស់",
-  "footer.sitemap": "ផែនទីគេហទំព័រ",
+  "footer.about.description": "VCBA គឺជាអង្គការមិនមែនរដ្ឋាភិបាលដែលតភ្ជាប់ គាំទ្រ និងជំរុញការអភិវឌ្ឍនៃសហគមន៍ធុរកិច្ចវៀតណាមនៅកម្ពុជា។",
+  "footer.contact.title": "ព័ត៌មានទំនាក់ទំនង",
+  "footer.contact.address.label": "អាសយដ្ឋាន៖",
+  "footer.contact.address.value": "អគារ H, មហាវិថីព្រះនរោត្តម, រាជធានីភ្នំពេញ, កម្ពុជា",
+  "footer.contact.hotline.label": "สายด่วน:",
+  "footer.contact.email.label": "អ៊ីមែល៖",
+  "footer.social.title": "ភ្ជាប់ទំនាក់ទំនងជាមួយពួកយើង",
+  "footer.social.description": "តាមដានពួកយើងនៅលើបណ្តាញសង្គម ដើម្បីទទួលបានព័ត៌មានថ្មីៗ។",
+  "footer.social.facebook": "Facebook",
+  "footer.social.youtube": "YouTube",
+  "footer.social.linkedin": "LinkedIn",
+  "footer.links.privacy": "គោលការណ៍​ភាព​ឯកជន",
+  "footer.links.terms": "លក្ខខណ្ឌនៃការប្រើប្រាស់",
+  "footer.links.sitemap": "ផែនទីគេហទំព័រ",
+  "footer.copyright": "© ២០២៤ សមាគមធុរកិច្ចវៀតណាមនៅកម្ពុជា (VCBA)។",
+  "footer.rights": "រក្សាសិទ្ធិគ្រប់យ៉ាង។",
   "home.news.title": "ព័ត៌មាន និងព្រឹត្តិការណ៍",
   "home.news.subtitle": "ធ្វើបច្ចុប្បន្នភាពព័ត៌មាន និងសកម្មភាពចុងក្រោយបំផុតពី VCBA និងសហគមន៍អាជីវកម្ម។",
   "home.news.viewMore": "មើល​បន្ថែម",
@@ -45,5 +58,78 @@
   "home.members.field.finance": "ហិរញ្ញវត្ថុ - ធនាគារ",
   "home.members.field.aviation": "អាកាសចរណ៍",
   "home.members.field.food": "អាហារ និងភេសជ្ជៈ",
-  "home.members.field.agriculture": "កសិកម្ម"
+  "home.members.field.agriculture": "កសិកម្ម",
+  "breadcrumb.home": "ទំព័រដើម",
+  "breadcrumb.news": "ព័ត៌មាន",
+  "news.card.readMore": "អាន​បន្ថែម",
+  "news.detail.postedOn": "កាលបរិច្ឆេទ",
+  "news.detail.author": "អ្នកនិពន្ធ",
+  "news.detail.views": "ចំនួនមើល",
+  "news.detail.tags": "ស្លាក",
+  "news.detail.share": "ចែករំលែក",
+  "news.detail.shareOn": "ចែករំលែកនៅលើ {{platform}}",
+  "news.detail.relatedNews": "ព័ត៌មានដែលเกี่ยวข้อง",
+  "news.detail.category.event": "សកម្មភាព និងព្រឹត្តិការណ៍",
+  "news.detail.author.vcba": "ក្រុមប្រព័ន្ធផ្សព្វផ្សាយ VCBA",
+  "news.detail.article1.title": "VCBA បានរៀបចំសន្និសីទប្រចាំปี ២០២៤ ដោយជោគជ័យ",
+  "news.detail.article1.excerpt": "សន្និសីទប្រចាំឆ្នាំ VCBA ២០២៤ បានប្រព្រឹត្តទៅដោយជោគជ័យ ដោយមានការចូលរួមពីប្រតិភូជាង ២០០នាក់ ដែលតំណាងឱ្យអាជីវកម្មវៀតណាមនៅកម្ពុជា រួមជាមួយនឹងដៃគូ និងភ្ញៀវកិត្តិយសមកពីប្រទេសទាំងពីរ។",
+  "news.detail.article1.h2_1": "ជោគជ័យលើសពីការរំពឹងទុក",
+  "news.detail.article1.p1": "សន្និសីទប្រចាំឆ្នាំ VCBA ២០២៤ ត្រូវបានប្រារព្ធឡើងនៅសណ្ឋាគារលំដាប់ផ្កាយ៥ នៅរាជធានីភ្នំពេញ ក្រោមប្រធានបទ \"ការតភ្ជាប់ - កិច្ចសហប្រតិបត្តិការ - ការអភិវឌ្ឍប្រកបដោយចីរភាព\"។ ព្រឹត្តិការណ៍នេះបានគូសបញ្ជាក់ពីប្រតិបត្តិការប្រកបដោយប្រសិទ្ធភាពរបស់សមាគមក្នុងរយៈពេលមួយឆ្នាំ ជាមួយនឹងសមិទ្ធិផលគួរឱ្យកត់សម្គាល់ជាច្រើន។",
+  "news.detail.article1.h3_1": "ចំណុចសំខាន់ៗនៃសន្និសីទ៖",
+  "news.detail.article1.li1_1": "របាយការណ៍សកម្មភាពឆ្នាំ ២០២៣ និងទិសដៅសម្រាប់ឆ្នាំ ២០២៤",
+  "news.detail.article1.li1_2": "ការចុះហត្ថលេខាលើកិច្ចព្រមព្រៀងសហប្រតិបត្តិការថ្មីជាមួយដៃគូកម្ពុជា",
+  "news.detail.article1.li1_3": "ពិធីប្រគល់រង្វាន់ដល់សហគ្រាសឆ្នើម",
+  "news.detail.article1.li1_4": "វេទិកាពិភាក្សាអំពីឱកាសវិនិយោគនៅកម្ពុជា",
+  "news.detail.article1.h2_2": "សុន្ទរកថារបស់ថ្នាក់ដឹកនាំ",
+  "news.detail.article1.q1": "VCBA បាននិងកំពុងដើរតួនាទីយ៉ាងសំខាន់ក្នុងការតភ្ជាប់សហគមន៍អាជីវកម្មវៀតណាមនៅកម្ពុជា។ យើងប្តេជ្ញាបន្តគាំទ្រសមាជិកក្នុងការអភិវឌ្ឍអាជីវកម្មប្រកបដោយចីរភាព។",
+  "news.detail.article1.q1_cite": "លោក Nguyen Van Hung ប្រធាន VCBA",
+  "news.detail.article1.p2": "លោក Nguyen Van Hung ប្រធាន VCBA បានសង្កត់ធ្ងន់ថា៖ \"នៅឆ្នាំ ២០២៤ VCBA នឹងផ្តោតលើការពង្រីកបណ្តាញសមាជិក ពង្រឹងសកម្មភាពបណ្តុះបណ្តាល និងគាំទ្រអាជីវកម្មក្នុងការទទួលបានព័ត៌មានទីផ្សារកម្ពុជាកាន់តែមានប្រសិទ្ធភាព។\"",
+  "breadcrumb.allNews": "ព័ត៌មានទាំងអស់",
+  "news.page.title": "ព័ត៌មាន VCBA ទាំងអស់",
+  "news.page.subtitle": "ធ្វើបច្ចុប្បន្នភាពព័ត៌មាន និងសកម្មភាពចុងក្រោយបំផុតពីសមាគមធុរកិច្ចវៀតណាមនៅកម្ពុជា",
+  "news.page.featuredBadge": "លក្ខណៈពិសេស",
+  "news.page.views": "ចំនួនមើល",
+  "news.page.noArticles": "រកមិនឃើញអត្ថបទក្នុងប្រភេទនេះទេ។",
+  "news.page.categories.all": "ទាំងអស់",
+  "news.page.categories.events": "ព្រឹត្តិការណ៍",
+  "news.page.categories.internal": "សកម្មភាពផ្ទៃក្នុង",
+  "news.page.categories.investment": "ការវិនិយោគ",
+  "news.page.categories.cooperation": "សហប្រតិបត្តិการ",
+  "news.page.categories.networking": "បណ្តាញ",
+  "news.page.filters.sortBy": "តម្រៀបតាម",
+  "news.page.filters.latest": "ថ្មី​បំផុត",
+  "news.page.filters.oldest": "ចាស់​បំផុត",
+  "news.page.filters.popular": "ពេញនិយម",
+  "news.page.filters.display": "បង្ហាញ",
+  "news.page.filters.grid": "ក្រឡាចត្រង្គ",
+  "news.page.filters.list": "បញ្ជី",
+  "news.page.filters.searchPlaceholder": "ស្វែងរកព័ត៌មាន...",
+  "news.page.pagination.previous": "មុន",
+  "news.page.pagination.next": "បន្ទាប់",
+  "news.page.article1.title": "VCBA បានរៀបចំសន្និសីទប្រចាំปี ២០២៤ ដោយជោគជ័យ",
+  "news.page.article1.description": "សន្និសីទប្រចាំឆ្នាំ VCBA ២០២៤ បានប្រព្រឹត្តទៅដោយជោគជ័យ ដោយមានការចូលរួមពីប្រតិភូជាង ២០០នាក់ ដែលតំណាងឱ្យអាជីវកម្មវៀតណាមនៅកម្ពុជា...",
+  "news.page.article2.title": "អាហារពេលល្ងាច Gala តភ្ជាប់អាជីវកម្មវៀតណាម-កម្ពុជា",
+  "news.page.article2.description": "កម្មវិធីអាហារពេលល្ងាចប្រចាំឆ្នាំបង្កើតឱកាសសម្រាប់បណ្តាញ និងការផ្លាស់ប្តូររវាងអាជីវកម្មនៃប្រទេសទាំងពីរ...",
+  "news.page.article3.title": "សិក្ខាសាលាស្តីពីឱកាសវិនិយោគនៅកម្ពុជា",
+  "news.page.article3.description": "សិក្ខាសាលានេះផ្តល់ព័ត៌មានលម្អិតអំពីបរិយាកាសវិនិយោគ និងវិស័យសក្តានុពលក្នុងប្រទេសកម្ពុជា...",
+  "news.page.article4.title": "ឱកាសច្រើនសម្រាប់សហគ្រាសវៀតណាមក្នុងការវិនិយោគ និងធ្វើអាជីវកម្មនៅកម្ពុជា",
+  "news.page.article4.description": "ស្ថានទូតវៀតណាមប្រចាំកម្ពុជាបានរៀបចំជំនួបធុរកិច្ច ដើម្បីជួយសម្រួលដល់សហគ្រាសក្នុងការពង្រីកសកម្មភាពអាជីវកម្មរបស់ខ្លួន...",
+  "news.page.article5.title": "Metfone - ប្រតិបត្តិករទូរគមនាគមន៍ធំជាងគេនៅកម្ពុជា",
+  "news.page.article5.description": "ក្រុមហ៊ុន Viettel Cambodia ដែលមានម៉ាកយីហោ Metfone បានដំណើរការតាំងពីឆ្នាំ ២០០៩ ហើយឥឡូវនេះជាប្រតិបត្តិករលេខ ១ នៅកម្ពុជា ដែលមានអតិថិជនជាង ៦ លាននាក់...",
+  "news.page.article6.title": "ជំរុញកិច្ចសហប្រតិបត្តិការពាណិជ្ជកម្មរវាងវៀតណាម និងកម្ពុជា",
+  "news.page.article6.description": "ឱកាសសហប្រតិបត្តិការជាច្រើនក្នុងវិស័យកសិកម្ម ឧស្សាហកម្មកែច្នៃ ទេសចរណ៍ និងសេវាកម្មរវាងប្រទេសទាំងពីរបានបើកឡើង...",
+  "news.page.article7.title": "សិក្ខាសាលាឯកទេសស្តីពីការនាំចេញ-នាំចូល",
+  "news.page.article7.description": "សិក្ខាសាលានេះផ្តល់ព័ត៌មានអំពីនីតិវិធីនាំចេញ-នាំចូល និងបែបបទគយនៅកម្ពុជា...",
+  "home.news.article1.title": "វៀតណាម-កម្ពុជា ជំរុញកិច្ចសហប្រតិបត្តិការឧស្សាហកម្ម និងពាណិជ្ជកម្ម",
+  "home.news.article1.excerpt": "វៀតណាម និងកម្ពុជា បានឯកភាពលើវិធានការមួយចំនួន ដើម្បីជំរុញកិច្ចសហប្រតិបត្តិការ...",
+  "home.news.article2.title": "សន្និសីទប្រចាំឆ្នាំលើកទី១០ របស់ VCBA",
+  "home.news.article2.excerpt": "សន្និសីទប្រចាំឆ្នាំរបស់ VCBA បានប្រព្រឹត្តទៅនៅទីក្រុងភ្នំពេញ ដោយមានការចូលរួមពីអាជីវកម្មជាង ២០០...",
+  "home.news.article3.title": "Metfone - ប្រតិបត្តិករទូរគមនាគមន៍ធំជាងគេនៅកម្ពុជា",
+  "home.news.article3.excerpt": "ក្រុមហ៊ុន Viettel Cambodia ដែលមានម៉ាក Metfone បានដំណើរការតាំងពីឆ្នាំ ២០០៩ ហើយឥឡូវនេះជាប្រតិបត្តិករលេខ១...",
+  "home.news.article4.title": "អាហារពេលល្ងាច Gala តភ្ជាប់អាជីវកម្មវៀតណាម-កម្ពុជា",
+  "home.news.article4.excerpt": "កម្មវិធីអាហារពេលល្ងាចប្រចាំឆ្នាំ បង្កើតឱកាសសម្រាប់ទំនាក់ទំនង និងផ្លាស់ប្តូររវាងអាជីវកម្ម...",
+  "home.news.article5.title": "VCBA ចូលជួប និងធ្វើការនៅស្ថានទូតវៀតណាម",
+  "home.news.article5.excerpt": "គណៈប្រតិភូការងាររបស់សមាគមអាជីវកម្មវៀតណាមនៅកម្ពុជា បានអញ្ជើញចូលរួមកិច្ចប្រជុំការងារសំខាន់មួយ...",
+  "home.news.article6.title": "ធនាគារ Sacombank កម្ពុជា ទទួលបានពានរង្វាន់កិត្តិយស",
+  "home.news.article6.excerpt": "សាខាធនាគារ Sacombank កម្ពុជា ត្រូវបានផ្តល់កិត្តិយសឲ្យទទួលរង្វាន់ធនាគារលក់រាយល្អបំផុត..."
 } 
