--- a/vcba-front-app/src/assets/i18n/vi.json
+++ b/vcba-front-app/src/assets/i18n/vi.json
@@ -14,9 +14,102 @@
   "menu.projects": "DỰ ÁN",
   "menu.legal": "VĂN BẢN PHÁP LUẬT",
   "menu.contact": "LIÊN HỆ",
-  "footer.privacy": "Chính sách bảo mật",
-  "footer.terms": "Điều khoản sử dụng",
-  "footer.sitemap": "Sơ đồ website",
+  "footer.about.description": "VCBA là tổ chức phi chính phủ được thành lập nhằm kết nối, hỗ trợ và thúc đẩy sự phát triển của cộng đồng doanh nghiệp Việt Nam tại Campuchia.",
+  "footer.contact.title": "Thông tin liên hệ",
+  "footer.contact.address.label": "Địa chỉ:",
+  "footer.contact.address.value": "Tòa nhà H, Đại lộ Preah Norodom, Phnom Penh, Campuchia",
+  "footer.contact.hotline.label": "Hotline:",
+  "footer.contact.email.label": "Email:",
+  "footer.social.title": "Kết nối với chúng tôi",
+  "footer.social.description": "Theo dõi chúng tôi trên các mạng xã hội để cập nhật thông tin mới nhất.",
+  "footer.social.facebook": "Facebook",
+  "footer.social.youtube": "YouTube",
+  "footer.social.linkedin": "LinkedIn",
+  "footer.copyright": "© 2024 Hiệp hội Doanh nghiệp Việt Nam tại Campuchia (VCBA).",
+  "footer.rights": "Đã đăng ký bản quyền.",
+  "footer.links.privacy": "Chính sách bảo mật",
+  "footer.links.terms": "Điều khoản sử dụng",
+  "footer.links.sitemap": "Sơ đồ website",
+  "breadcrumb.home": "Trang chủ",
+  "breadcrumb.news": "Tin tức",
+  "news.card.readMore": "Đọc thêm",
+  "news.detail.postedOn": "Ngày đăng",
+  "news.detail.author": "Tác giả",
+  "news.detail.views": "Lượt xem",
+  "news.detail.tags": "Tags",
+  "news.detail.share": "Chia sẻ",
+  "news.detail.shareOn": "Chia sẻ trên {{platform}}",
+  "news.detail.relatedNews": "Tin tức liên quan",
+  "news.detail.category.event": "Hoạt động sự kiện",
+  "news.detail.author.vcba": "Ban Truyền thông VCBA",
+  "news.detail.article1.title": "VCBA tổ chức thành công Hội nghị thường niên 2024",
+  "news.detail.article1.excerpt": "Hội nghị thường niên VCBA 2024 đã diễn ra thành công với sự tham gia của hơn 200 đại biểu đại diện cho các doanh nghiệp Việt Nam tại Campuchia, cùng các đối tác và khách mời từ hai nước.",
+  "news.detail.article1.h2_1": "Thành công vượt mong đợi",
+  "news.detail.article1.p1": "Hội nghị thường niên VCBA 2024 được tổ chức tại khách sạn 5 sao tại Phnom Penh với chủ đề \"Kết nối - Hợp tác - Phát triển bền vững\". Sự kiện này đánh dấu một năm hoạt động hiệu quả của hiệp hội với nhiều thành tựu đáng kể.",
+  "news.detail.article1.h3_1": "Các điểm nổi bật của hội nghị:",
+  "news.detail.article1.li1_1": "Báo cáo tổng kết hoạt động năm 2023 và phương hướng năm 2024",
+  "news.detail.article1.li1_2": "Ký kết các thỏa thuận hợp tác mới với đối tác Campuchia",
+  "news.detail.article1.li1_3": "Trao giải thưởng cho các doanh nghiệp xuất sắc",
+  "news.detail.article1.li1_4": "Diễn đàn thảo luận về cơ hội đầu tư tại Campuchia",
+  "news.detail.article1.h2_2": "Phát biểu của lãnh đạo",
+  "news.detail.article1.q1": "VCBA đã và đang đóng vai trò quan trọng trong việc kết nối cộng đồng doanh nghiệp Việt Nam tại Campuchia. Chúng tôi cam kết tiếp tục hỗ trợ các thành viên phát triển kinh doanh bền vững.",
+  "news.detail.article1.q1_cite": "Ông Nguyễn Văn Hùng, Chủ tịch VCBA",
+  "news.detail.article1.p2": "Ông Nguyễn Văn Hùng, Chủ tịch VCBA nhấn mạnh: \"Năm 2024, VCBA sẽ tập trung vào việc mở rộng mạng lưới thành viên, tăng cường các hoạt động đào tạo và hỗ trợ doanh nghiệp tiếp cận thông tin thị trường Campuchia một cách hiệu quả hơn.\"",
+  
+  "breadcrumb.allNews": "Tất cả tin tức",
+
+  "news.page.title": "Tất cả tin tức VCBA",
+  "news.page.subtitle": "Cập nhật những tin tức mới nhất về hoạt động của Hiệp hội Doanh nghiệp Việt Nam tại Campuchia",
+  "news.page.featuredBadge": "Tin nổi bật",
+  "news.page.views": "lượt xem",
+  "news.page.noArticles": "Không tìm thấy bài viết nào trong danh mục này.",
+  
+  "news.page.categories.all": "Tất cả",
+  "news.page.categories.events": "Hoạt động sự kiện",
+  "news.page.categories.internal": "Hoạt động nội bộ",
+  "news.page.categories.investment": "Đầu tư",
+  "news.page.categories.cooperation": "Hợp tác",
+  "news.page.categories.networking": "Networking",
+
+  "news.page.filters.sortBy": "Sắp xếp",
+  "news.page.filters.latest": "Mới nhất",
+  "news.page.filters.oldest": "Cũ nhất",
+  "news.page.filters.popular": "Phổ biến",
+  "news.page.filters.display": "Hiển thị",
+  "news.page.filters.grid": "Dạng lưới",
+  "news.page.filters.list": "Dạng danh sách",
+  "news.page.filters.searchPlaceholder": "Tìm kiếm tin tức...",
+
+  "news.page.pagination.previous": "Trước",
+  "news.page.pagination.next": "Sau",
+
+  "news.page.article1.title": "VCBA tổ chức thành công Hội nghị thường niên 2024",
+  "news.page.article1.description": "Hội nghị thường niên VCBA 2024 đã diễn ra thành công với sự tham gia của hơn 200 đại biểu đại diện cho các doanh nghiệp Việt Nam tại Campuchia...",
+  "news.page.article2.title": "Gala dinner kết nối doanh nghiệp Việt-Campuchia",
+  "news.page.article2.description": "Chương trình gala dinner thường niên tạo cơ hội kết nối và giao lưu giữa các doanh nghiệp hai nước...",
+  "news.page.article3.title": "Hội thảo về cơ hội đầu tư tại Campuchia",
+  "news.page.article3.description": "Hội thảo cung cấp thông tin chi tiết về môi trường đầu tư và các lĩnh vực tiềm năng tại Campuchia...",
+  "news.page.article4.title": "Nhiều dư địa cho doanh nghiệp Việt Nam đầu tư kinh doanh tại Campuchia",
+  "news.page.article4.description": "Đại sứ quán Việt Nam tại Campuchia tổ chức hội nghị gặp gỡ doanh nghiệp nhằm tạo điều kiện cho các doanh nghiệp mở rộng hoạt động...",
+  "news.page.article5.title": "Metfone - Nhà mạng viễn thông lớn nhất Campuchia",
+  "news.page.article5.description": "Viettel Cambodia với thương hiệu Metfone hoạt động từ năm 2009 và hiện là nhà mạng số 1 tại Campuchia với hơn 6 triệu khách hàng...",
+  "news.page.article6.title": "Thúc đẩy hợp tác thương mại Việt Nam - Campuchia",
+  "news.page.article6.description": "Nhiều cơ hội hợp tác trong các lĩnh vực nông nghiệp, công nghiệp chế biến, du lịch và dịch vụ giữa hai nước được mở ra...",
+  "news.page.article7.title": "Hội thảo chuyên đề về xuất nhập khẩu",
+  "news.page.article7.description": "Hội thảo cung cấp thông tin về quy trình xuất nhập khẩu và các thủ tục hải quan tại Campuchia...",
+
+  "home.news.article1.title": "Việt Nam - Campuchia thúc đẩy hợp tác công nghiệp và thương mại",
+  "home.news.article1.excerpt": "Việt Nam và Campuchia đã thống nhất một số biện pháp nhằm thúc đẩy hợp tác...",
+  "home.news.article2.title": "Hội nghị thường niên VCBA lần thứ 10",
+  "home.news.article2.excerpt": "Hội nghị thường niên VCBA diễn ra tại Phnom Penh với sự tham dự của hơn 200 doanh nghiệp...",
+  "home.news.article3.title": "Metfone - Nhà mạng viễn thông lớn nhất Campuchia",
+  "home.news.article3.excerpt": "Viettel Cambodia với thương hiệu Metfone hoạt động từ năm 2009 và hiện là nhà mạng số 1...",
+  "home.news.article4.title": "Gala dinner kết nối doanh nghiệp Việt-Campuchia",
+  "home.news.article4.excerpt": "Chương trình gala dinner thường niên tạo cơ hội kết nối và giao lưu giữa các doanh nghiệp...",
+  "home.news.article5.title": "VCBA thăm và làm việc tại Đại sứ quán Việt Nam",
+  "home.news.article5.excerpt": "Đoàn công tác của Hiệp hội Doanh nghiệp Việt Nam tại Campuchia đã có buổi làm việc quan trọng...",
+  "home.news.article6.title": "Sacombank Cambodia nhận giải thưởng uy tín",
+  "home.news.article6.excerpt": "Ngân hàng Sacombank chi nhánh Campuchia vinh dự nhận giải thưởng Ngân hàng bán lẻ tốt nhất...",
   "home.news.title": "TIN TỨC VÀ SỰ KIỆN",
   "home.news.subtitle": "Cập nhật những thông tin và hoạt động mới nhất từ VCBA và cộng đồng doanh nghiệp.",
   "home.news.viewMore": "Xem thêm",
@@ -45,20 +138,5 @@
   "home.members.field.finance": "Tài chính - Ngân hàng",
   "home.members.field.aviation": "Hàng không",
   "home.members.field.food": "Thực phẩm & Đồ uống",
-  "home.members.field.agriculture": "Nông nghiệp",
-  "footer.about.description": "VCBA là tổ chức phi lợi nhuận được thành lập trên cơ sở kế thừa Câu lạc bộ Doanh nghiệp Việt Nam tại Campuchia, có sự tham gia của các doanh nghiệp lớn trong nhiều lĩnh vực kinh tế.",
-  "footer.contact.title": "Thông tin liên hệ",
-  "footer.contact.address.label": "Địa chỉ",
-  "footer.contact.address.value": "Số 255 (Suncity) Tầng 1, đường 51 góc đường 370, phường Buong Keng Koan, thủ đô Phnompenh",
-  "footer.contact.hotline.label": "Hotline",
-  "footer.contact.email.label": "Email",
-  "footer.social.title": "Kết nối với chúng tôi",
-  "footer.social.description": "Theo dõi VCBA để cập nhật thông tin mới nhất về các hoạt động và cơ hội kinh doanh",
-  "footer.social.facebook": "Facebook",
-  "footer.social.youtube": "YouTube",
-  "footer.social.linkedin": "LinkedIn",
-  "footer.copyright": "© 2024 VCBA - Hiệp hội Doanh nghiệp Việt Nam-Campuchia. All rights reserved.",
-  "footer.links.privacy": "Chính sách bảo mật",
-  "footer.links.terms": "Điều khoản sử dụng",
-  "footer.links.sitemap": "Sơ đồ website"
+  "home.members.field.agriculture": "Nông nghiệp"
 } 
